# FileSignatureGenerator

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp
include/: file_manager_impl.h  file_signature_generator.h  file_signature_handler.h  resource_manager_impl.h
include/interfaces/: data_resource_manager.h  file_manager.h  hash_resource_manager.h  resource_manager.h
src/: file_manager_impl.cpp  file_signature_generator.cpp  file_signature_handler.cpp  resource_manager_impl.cpp
utils/include/: common.h  common_types.h  constants.h  hash_generator.h  types.h
utils/src/: common.cpp  hash_generator.cpp
